chore(v6): merge main into v6

--- a/src/patternfly/components/Form/form.scss
+++ b/src/patternfly/components/Form/form.scss
@@ -243,6 +243,7 @@ $pf-v6-c-form--m-horizontal--breakpoint-map: build-breakpoint-map("sm", "md", "l
 
   &.pf-m-info {
     display: flex;
+    gap: var(--#{$form}__group-label--m-info--Gap);
     align-items: flex-end;
   }
 }
