fix(:has): removed :has()

--- a/src/patternfly/components/Breadcrumb/breadcrumb.scss
+++ b/src/patternfly/components/Breadcrumb/breadcrumb.scss
@@ -54,7 +54,7 @@
   white-space: nowrap; // Keeps the item-divider and __link text on the same line
   list-style: none;
 
-  &:first-child:has(.#{$breadcrumb}__link) {
+  &:first-child {
     --#{$breadcrumb}__link--PaddingInlineStart: 0; // remove padding from first child if link
   }
 
