--- a/src/patternfly/components/Menu/menu.scss
+++ b/src/patternfly/components/Menu/menu.scss
@@ -487,10 +487,14 @@
     padding-inline-end: var(--#{$menu}__list-item--has--menu-action--PaddingInlineEnd);
   }
 
+  .#{$menu}__item-action:last-child {
+    padding-inline-end: var(--#{$menu}__item--PaddingInlineEnd);
+  }
+
   &.pf-m-focus,
   &:focus-within,
-  &:has(> :hover) {
-    background-color: var(--#{$menu}__list-item--hover--BackgroundColor);
+  &:hover {
+    --#{$menu}__list-item--BackgroundColor: var(--#{$menu}__list-item--hover--BackgroundColor);
 
     .#{$menu}__item-select-icon,
     .#{$menu}__item-external-icon {
