--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -344,12 +344,10 @@
 }
 
 // Focus on the card (focus on label but not checked)
-.#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input, .#{$card}__clickable-action):where(:focus-visible) {
-  &,
-  ~ :is(.#{$check}__label, .#{$radio}__label) {
-    --#{$card}--BorderColor: var(--#{$card}--m-selectable--focus--BorderColor);
-    --#{$card}--BorderWidth: var(--#{$card}--m-selectable--focus--BorderWidth);
-  }
+.#{$card}__selectable-actions .#{$card}__clickable-action:where(:focus-visible),
+.#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input, .#{$card}__clickable-action):where(:focus-visible) ~ :is(.#{$check}__label, .#{$radio}__label) {
+  --#{$card}--BorderColor: var(--#{$card}--m-selectable--focus--BorderColor);
+  --#{$card}--BorderWidth: var(--#{$card}--m-selectable--focus--BorderWidth);
 }
 
 // Focus on a selected card (focus + checked)
