fix(card): update from horizontal image to masthead-image
masthead-image has better compatibility with dark mode

--- a/src/patternfly/components/Masthead/masthead-image.hbs
+++ b/src/patternfly/components/Masthead/masthead-image.hbs
@@ -1,4 +1,4 @@
-<svg height="37px" viewBox="0 0 679 158">
+<svg height={{ternary masthead-image--height masthead-image--height "37px"}} viewBox="0 0 679 158">
     <title>PF-HorizontalLogo-Color </title>
     <defs>
         <linearGradient x1="68%" y1="2.25860997e-13%" x2="32%" y2="100%" id="linearGradient-{{masthead--id}}">
