--- a/src/patternfly/components/Brand/brand.hbs
+++ b/src/patternfly/components/Brand/brand.hbs
@@ -12,7 +12,7 @@
     {{#if brand--img-url--base}}
       <img src="{{brand--img-url--base}}" alt="Fallback patternFly default logo">
     {{else}}
-      <img src="/assets/images/pf_logo.svg" alt="Fallback patternFly default logo">
+      <img src="/assets/images/PF-HorizontalLogo-Color.svg" alt="Fallback patternFly default logo">
     {{/if}}
   </picture>
 {{else}}
