feat(modal): add calc for blockstart and inlineend

--- a/src/patternfly/components/ModalBox/modal-box.scss
+++ b/src/patternfly/components/ModalBox/modal-box.scss
@@ -61,8 +61,8 @@
   --#{$modal-box}__header--body--PaddingBlockStart: var(--pf-t--global--spacer--sm);
 
   // Close
-  --#{$modal-box}__close--InsetBlockStart: var(--pf-t--global--spacer--md);
-  --#{$modal-box}__close--InsetInlineEnd: var(--#{$modal-box}__header--PaddingInlineEnd);
+  --#{$modal-box}__close--InsetBlockStart: calc(var(--#{$modal-box}__header--PaddingBlockStart) - var(--pf-t--global--spacer--control--vertical--default));
+  --#{$modal-box}__close--InsetInlineEnd: calc(var(--#{$modal-box}__header--PaddingInlineEnd) - var(--pf-t--global--spacer--control--vertical--default));
   --#{$modal-box}__close--sibling--MarginInlineEnd: calc(var(--pf-t--global--spacer--xl) + var(--pf-t--global--spacer--sm));
 
   // Footer
